Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-126

std::cout stops working if log4cxx is first to output

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • Appender
    • None
    • Linux (RedHat FC4) x86_64, g++ 4.0.2 20051125 (Red Hat 4.0.2-8)

    Description

      If log4cxx is the first to write output via the ConsoleAppender, then std::cout (and stdout) doesn't work. If, on the other hand, std::cout is written to before log4cxx kicks in, then they both (std::cout and log4cxx) work. I will attach a small test program that illustrates the problem.

      Attachments

        1. output.cpp
          1 kB
          Andreas Hartmann
        2. triv.cpp
          0.4 kB
          Donovan Kolbly

        Activity

          People

            carnold@apache.org Curt Arnold
            dkolbly Donovan Kolbly
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: