LOGCXX-126: ConsoleAppender now checks fwide and uses C STL IO